# swc-plugin-css-modules

./: .gitignore  Cargo.toml  MAINTAINERS.md  README.md  package-lock.json  package.json  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: branch.yml  cargo_update.yml  publish.yml  pull_request.yml  workflow_test.yml
src/: config.rs  injector.rs  lib.rs
src/generic_names/: mod.rs
src/loader_utils/: hash.rs  interpolate.rs  mod.rs
tests/: fixture.rs
tests/fixture/component/: config.json
tests/fixture/hash/: config.json  input.js  output.js
tests/fixture/named_import/: config.json  input.js  output.js
