[package]
name = "swc-plugin-css-modules"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]

digest = { version = "0.10", default-features = false }
# hashes
md4 = { version = "0.10", default-features = false }
md-5 = { version = "0.10", default-features = false }
sha1 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
twox-hash = "2"

# digest
base16ct = { version = "0.2", features = ["alloc"] }
base32ct = { version = "0.2", features = ["alloc"] }
base64ct = { version = "1", features = ["alloc"] }

pathdiff = "0.2"
path-absolutize = { version = "3", features = ["use_unix_paths_on_wasm"] }

serde = "1"
serde_json = "1"
serde-inline-default = "0.2.0"
regex = "1"
lazy_static = "1"
swc_core = { version = "27", features = [
  "ecma_plugin_transform",
  "ecma_parser",
] }

ts-rs = "11"

[dev-dependencies]
testing = "13"
# .cargo/config defines few alias to build plugin.
# cargo build-wasip1 generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
